--- a/index.html
+++ b/index.html
@@ -1024,7 +1024,7 @@
                 </div>
                 <div class="form-group">
                     <label for="language-select">Language</label>
-                    <select id="theme-select" class="form-control">
+                    <select id="language-select" class="form-control">
                         <option value="en">English</option>
                         <option value="es">Español</option>
                         <option value="fr">Français</option>
